# motionmcp-kimodo

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: DEVELOPMENT.md  INSTALL.md  MOTION_CORRECTION.md  README.md  USAGE.md
src/motionmcp_kimodo/: __init__.py  __main__.py  backbone.py  cli.py  skeleton.py  translate.py
tests/: test_smoke.py  test_translate_device.py
