[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "motionmcp-kimodo"
version = "0.1.0"
description = "MMCP backbone for the Kimodo motion model. A drop-in motionmcp.Backbone that runs a Kimodo SOMA model under the protocol."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [{ name = "MMCP contributors" }]
keywords = ["mmcp", "motionmcp", "kimodo", "motion", "animation", "backbone"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Multimedia :: Graphics :: 3D Modeling",
]

dependencies = [
    "motionmcp-sdk >= 0.1",
    # Kimodo isn't published to PyPI, so we pin a git source. Animatica
    # maintains the fork at ``animatica-ai/kimodo`` (split out of the
    # cloud server repo); tags or commits can be added with ``@ref`` if
    # version pinning becomes important.
    "kimodo @ git+https://github.com/animatica-ai/kimodo.git",
    "numpy >= 1.24",
    "torch >= 2.0",
]

[project.optional-dependencies]
dev = [
    "pytest >= 8.0",
    "ruff >= 0.4",
]

[project.scripts]
# `motionmcp-kimodo --port 8080 --model soma30` runs a server.
motionmcp-kimodo = "motionmcp_kimodo.cli:main"

[project.urls]
Homepage = "https://animatica.ai/mmcp"
Source   = "https://github.com/animatica-ai/motionmcp-kimodo"
Issues   = "https://github.com/animatica-ai/motionmcp-kimodo/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/motionmcp_kimodo"]

[tool.hatch.build.targets.sdist]
include = ["src/motionmcp_kimodo", "tests", "README.md", "LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
